public class Bathroom {
    TextUI ui = new TextUI();}
