public class Bedroom {
    TextUI ui = new TextUI();
}
