public class Livingroom {
    TextUI ui = new TextUI();
}
